TRANSLATE-1430 Enable copy & paste of internal tags - copy selected content from a source into the target taking internal tags into consideration - Segment A must not copy internal tags into Segment B - handle copied content that comes from our copying AND from the clipboard - don't insert a tag in the target if it already exists - internal tags in opened source can be selected - dblclick in source of an opened segment: caret no longer jumps into target, but allows selecting content for copying

--- a/application/modules/editor/css/main.css
+++ b/application/modules/editor/css/main.css
@@ -82,8 +82,6 @@ td.direction-rtl.x-grid-td div.x-grid-cell-inner {
 
 .segment-content .x-form-display-field del,
 .segment-content .x-form-display-field img,
-.segment-content .x-form-display-field div.internal-tag,
-.segment-content .x-form-display-field div.internal-tag span,
 .segment-tag-column div.x-grid-cell-inner del,
 .segment-tag-column div.x-grid-cell-inner img,
 .segment-tag-column div.x-grid-cell-inner div.internal-tag,
